[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Map/Ammo_Crate.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet/AmmoCrate.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Weapon/ammo_pickup.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="AmmoCrate" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="PickUpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_AmmoCrate_body_entered"]
[connection signal="finished" from="PickUpSound" to="." method="_on_PickUpSound_finished"]
